# computer_vision_algorithms

./: .gitignore  CMakeLists.txt  README.md
headers/cv_algorithms/: BitwiseOperators.h  CVAlgorithmsInterface.h  LogTransformation.h  NegativeImage.h  PowerLawGammaTransformation.h
headers/utils/: ImagesRepository.h
src/: main.cpp
src/cv_algorithms/: BitwiseOperators.cpp  LogTransformation.cpp  NegativeImage.cpp  PowerLawGammaTransformation.cpp
src/utils/: ImagesRepository.cpp
